@@ -1,3 +1,6 @@
+2014-02-13 Stefan Bidigaray <stefanbidi@gmail.com>
+	* Source/GSUnicode.c: Completed isnan/isinf functions for long double.
+
 2014-02-12 Stefan Bidigaray <stefanbidi@gmail.com>
 	* Source/config.h.in,
 	* configure,
